# eval-lib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
eval_lib/: __init__.py  data.py  metrics.py  runner.py  spec.py  version.py
tests/: test_metrics.py  test_runner.py  test_spec.py
