[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-lib"
version = "0.4.0"
description = "Shared evaluation standard: metric registry, eval_spec validation, W&B runner"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "wandb>=0.16",
    "scikit-learn>=1.4",
    "PyYAML>=6",
    "datasets>=3",
]

[project.urls]
Homepage = "https://github.com/dream-ai-lab/eval-lib"

[tool.setuptools.packages.find]
include = ["eval_lib*"]
